--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <ul>     
         <li><a href="https://w.app/gglkst">WhatsApp</a></li>
-        <li><a href="https://www.canva.com/design/DAGrSxoy6GU/VDX2tSLj2RQF_NmgjHg5MQ/edit?ui=eyJEIjp7IlQiOnsiQSI6IlBCNHM2VmpxWHM4aGM0UzIifX19&fbclid=PAQ0xDSwLKlwJleHRuA2FlbQIxMQABp710ZognQTJ1QjHTWlo-R91oCxb1Kk5GhegIPKhuqfxT8FW_Hv4TLvVsaihe_aem_GsT1k9vXc5jHBwg1znUCWQ">Portifólio</a></li>
+        <li><a href="https://heyzine.com/flip-book/ec68f9796e.html">Portifólio</a></li>
         <li><a href="https://drive.google.com/drive/folders/1_bED90-nGNoHm9NoEvNw5J6vCznOlw7-">Produções</a></li>
     </ul>
 
