--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <ul>     
         <li><a href="https://w.app/gglkst">WhatsApp</a></li>
-        <li><a href="https://heyzine.com/flip-book/ec68f9796e.html">Portifólio</a></li>
+        <li><a href="https://heyzine.com/flip-book/ec68f9796e.html">Portfólio</a></li>
         <li><a href="https://drive.google.com/drive/folders/1_bED90-nGNoHm9NoEvNw5J6vCznOlw7-">Produções</a></li>
     </ul>
 
