--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>linkbio</title>
     <script src="scripts.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <link rel="stylesheet" href="global.css/style.css">
 
@@ -25,10 +26,11 @@
         </header>
         
         <nav>
-            <ul>     
-                <li><a href="https://w.app/gglkst" target="_blank">WhatsApp</a></li>
-                <li><a href="https://heyzine.com/flip-book/ec68f9796e.html" target="_blank">Portfólio</a></li>
-                <li><a href="https://drive.google.com/drive/folders/1_bED90-nGNoHm9NoEvNw5J6vCznOlw7-" target="_blank">Produções</a></li>
+             <ul>     
+                <li><a href="https://wa.me/+558398753897" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                <li><a href="https://heyzine.com/flip-book/ec68f9796e.html" target="_blank"><i class="fas fa-book"></i> Portfólio</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1_bED90-nGNoHm9NoEvNw5J6vCznOlw7-" target="_blank"><i class="fas fa-folder-open"></i> Produções</a></li>
+                <li><a href="https://www.linkedin.com/in/caroline-cassiano-7204a8376" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
             </ul>
         </nav>
 
